kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gcp-final-task
spec:
  defaultBackend:
    service:
      name: gcp-final-task
      port:
        number: 8000
